# headless-human

./: .gitignore  CONTRIBUTING.md  README.md  READ_THIS_FIRST.md  READ_THIS_FIRST.txt  break_timer.py  clock.py  clock_events.jsonl  file_watcher.py  generate_manifest.py  human_setup.py  initial_setup.py  instructions.md  main.py  manifest.json  note.py  on_human_entry.py  pyproject.toml  requirements.dev.txt  requirements.txt  settings.json  setup.sh  submit.py  terminal.py  terminal_recorder.py  tool_server.py  util.py
.github/workflows/: pr-and-main.yaml
.mentat/: precommit.sh  setup.sh
assets/: READ_THIS_FIRST.md
scripts/: generate_manifest.py  hooks_server.py
src/: clock.py  human_setup.py  note.py  score.py  settings.py  submit.py  terminal.py  util.py
tests/: conftest.py  test_human_setup.py  test_score.py  test_submit.py  test_terminal.py  wordle.cast  wordle.cast.prompt-indices
