[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "headless-human"
version = "0.1.1"
description = ""
authors = ["METR <team@metr.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

aiofiles = "^24.1.0"
asciinema = "^2.4.0"
click = "^8.1.7"
prettytable = "^3.11.0"

[tool.poetry.dependencies.pyhooks]
git = "https://github.com/METR/vivaria.git"
rev = "feature/local-viv"
subdirectory = "pyhooks"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.7"
fastapi = "^0.112.1"
pyright = "^1.1.381"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
pytest-watcher = "^0.4.3"
ruff = "^0.6.7"
uvicorn = "^0.30.6"

[tool.ruff]
line-length = 88
